syntax = "proto3";
package sideline.sideline;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "sideline/sideline/params.proto";
import "sideline/sideline/employer.proto";
import "sideline/sideline/developer.proto";
import "sideline/sideline/task.proto";
// this line is used by starport scaffolding # 1

option go_package = "sideline/x/sideline/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sideline/sideline/params";
  }
  // Queries a Employer by index.
	rpc Employer(QueryGetEmployerRequest) returns (QueryGetEmployerResponse) {
		option (google.api.http).get = "/sideline/sideline/employer/{index}";
	}

	// Queries a list of Employer items.
	rpc EmployerAll(QueryAllEmployerRequest) returns (QueryAllEmployerResponse) {
		option (google.api.http).get = "/sideline/sideline/employer";
	}

// Queries a Developer by index.
	rpc Developer(QueryGetDeveloperRequest) returns (QueryGetDeveloperResponse) {
		option (google.api.http).get = "/sideline/sideline/developer/{index}";
	}

	// Queries a list of Developer items.
	rpc DeveloperAll(QueryAllDeveloperRequest) returns (QueryAllDeveloperResponse) {
		option (google.api.http).get = "/sideline/sideline/developer";
	}

// Queries a Task by id.
	rpc Task(QueryGetTaskRequest) returns (QueryGetTaskResponse) {
		option (google.api.http).get = "/sideline/sideline/task/{id}";
	}

	// Queries a list of Task items.
	rpc TaskAll(QueryAllTaskRequest) returns (QueryAllTaskResponse) {
		option (google.api.http).get = "/sideline/sideline/task";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetEmployerRequest {
	  string index = 1;

}

message QueryGetEmployerResponse {
	Employer employer = 1 [(gogoproto.nullable) = false];
}

message QueryAllEmployerRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEmployerResponse {
	repeated Employer employer = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetDeveloperRequest {
	  string index = 1;

}

message QueryGetDeveloperResponse {
	Developer developer = 1 [(gogoproto.nullable) = false];
}

message QueryAllDeveloperRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDeveloperResponse {
	repeated Developer developer = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetTaskRequest {
	uint64 id = 1;
}

message QueryGetTaskResponse {
	Task Task = 1 [(gogoproto.nullable) = false];
}

message QueryAllTaskRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTaskResponse {
	repeated Task Task = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
